target blank commit

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                         <h3 class="text-xl font-bold mb-2">Casanove</h3>
                         <p class="text-slate-400 mb-4">2025 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/3B4X5VYzm0UJAwtWFpnprB?si=csSbaUrETS6ecLiut3YP2w" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/casanova-single/1847546681" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/casanova" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/220485582?from=search&srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/3B4X5VYzm0UJAwtWFpnprB?si=csSbaUrETS6ecLiut3YP2w" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/casanova-single/1847546681" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/casanova" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/220485582?from=search&srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
@@ -163,10 +163,10 @@
                         <h3 class="text-xl font-bold mb-2">Ochanya</h3>
                         <p class="text-slate-400 mb-4">2025 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/0PuiVt9kkeItnSz91tNs2l?si=iBY43D9lTISEsMmZGw3aXg" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/ochanya-single/1864971708" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/ochanya" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/230144284?from=search&srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/0PuiVt9kkeItnSz91tNs2l?si=iBY43D9lTISEsMmZGw3aXg" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/ochanya-single/1864971708" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/ochanya" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/230144284?from=search&srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
@@ -179,10 +179,10 @@
                         <h3 class="text-xl font-bold mb-2">Moto</h3>
                         <p class="text-slate-400 mb-4">2025 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/2EL8xgBNzJOAqVh8OJ5tRZ?si=xCvrU-sURyqpz_x27MLmSQ" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/moto-single/1840101455" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/moto" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/216705890?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/2EL8xgBNzJOAqVh8OJ5tRZ?si=xCvrU-sURyqpz_x27MLmSQ" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/moto-single/1840101455" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/moto" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/216705890?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
@@ -195,10 +195,10 @@
                         <h3 class="text-xl font-bold mb-2">Morenike</h3>
                         <p class="text-slate-400 mb-4">2025 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/2GFZ2PiBhUx0GC1KJ6Zhiv?si=iF5ruffYRuiRN_VNQ5E9yA" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/morenike-single/1807788693" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/morenike" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/203598225?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/2GFZ2PiBhUx0GC1KJ6Zhiv?si=iF5ruffYRuiRN_VNQ5E9yA" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/morenike-single/1807788693" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/morenike" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/203598225?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
@@ -211,10 +211,10 @@
                         <h3 class="text-xl font-bold mb-2">Adam and Eve</h3>
                         <p class="text-slate-400 mb-4">2024 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/4dmrQPSm3YTLqDBeSWvfP5?si=POJ3gYvvRuOvAMz3hg7qdQ" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/adam-and-eve-single/1786172606" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/adam-and-eve" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/194023872?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/4dmrQPSm3YTLqDBeSWvfP5?si=POJ3gYvvRuOvAMz3hg7qdQ" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/adam-and-eve-single/1786172606" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/adam-and-eve" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/194023872?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
@@ -227,10 +227,10 @@
                         <h3 class="text-xl font-bold mb-2">Ifemi</h3>
                         <p class="text-slate-400 mb-4">2025 Single</p>
                         <div class="flex gap-3 flex-wrap">
-                            <a href="https://open.spotify.com/album/2lbm9DE6cbJBMHHsUsimbT?si=tCzffFeBTUia-BQRrS9LDA" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
-                            <a href="https://music.apple.com/us/album/ifemi-single/1791919696" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
-                            <a href="https://audiomack.com/mikki-lens/song/ifemi" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
-                            <a href="https://www.boomplay.com/songs/196762862?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
+                            <a href="https://open.spotify.com/album/2lbm9DE6cbJBMHHsUsimbT?si=tCzffFeBTUia-BQRrS9LDA" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Spotify</a>
+                            <a href="https://music.apple.com/us/album/ifemi-single/1791919696" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Apple Music</a>
+                            <a href="https://audiomack.com/mikki-lens/song/ifemi" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Audiomack</a>
+                            <a href="https://www.boomplay.com/songs/196762862?srModel=COPYLINK&srList=WEB&share_content=music&share_channel=copylink&share_platform=web" target="_blank" class="text-sm text-orange-400 hover:text-orange-300">Boomplay</a>
                         </div>
                     </div>
                 </div>
