press and feature commit

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <p class="text-lg text-amber-300 mb-4 italic">
                         "Mikki Lens is the future of Afrobeat, blending tradition with innovation in ways that feel both authentic and revolutionary."
                     </p>
-                    <p class="font-bold text-white">Rolling Stone</p>
+                    <p class="font-bold text-white">Paul Ogbu</p>
                     <p class="text-slate-400 text-sm">Music Culture Correspondent</p>
                 </div>
                 <!-- Press Card 2 -->
@@ -259,7 +259,7 @@
                     <p class="text-lg text-amber-300 mb-4 italic">
                         "A powerhouse performer with unmistakable artistry. Mikki Lens commands the stage like few artists can."
                     </p>
-                    <p class="font-bold text-white">Pitchfork</p>
+                    <p class="font-bold text-white">Sound City</p>
                     <p class="text-slate-400 text-sm">Music Review Staff</p>
                 </div>
                 <!-- Press Card 3 -->
@@ -267,7 +267,7 @@
                     <p class="text-lg text-amber-300 mb-4 italic">
                         "Mikki's music resonates globally while maintaining deep cultural roots. A truly transcendent artist."
                     </p>
-                    <p class="font-bold text-white">BBC Music</p>
+                    <p class="font-bold text-white">Ray power</p>
                     <p class="text-slate-400 text-sm">World Music Editor</p>
                 </div>
                 <!-- Press Card 4 -->
@@ -275,7 +275,7 @@
                     <p class="text-lg text-amber-300 mb-4 italic">
                         "An essential voice in contemporary Afrobeat. Mikki Lens is redefining what the genre can be."
                     </p>
-                    <p class="font-bold text-white">The Guardian</p>
+                    <p class="font-bold text-white">The Guardian Newspaper</p>
                     <p class="text-slate-400 text-sm">Arts & Entertainment</p>
                 </div>
             </div>
